// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders list item for the role 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PermissionsListItem
    namespace="test"
    role={
        Object {
            "apiGroup": "test.kubeapps.com",
            "resource": "tests",
            "verbs": Array [
              "get",
              "create",
            ],
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        "get, create",
        " ",
        <code>
          tests
</code>,
        " ",
        <span>
          (
          <code>
                    test.kubeapps.com
          </code>
          )
</span>,
        " ",
        "in ",
        <span>
          the 
          <code>
                    test
          </code>
           namespace
</span>,
        ".",
      ],
    },
    "ref": null,
    "rendered": Array [
      "get, create",
      " ",
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "tests",
        },
        "ref": null,
        "rendered": "tests",
        "type": "code",
      },
      " ",
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "(",
            <code>
              test.kubeapps.com
</code>,
            ")",
          ],
        },
        "ref": null,
        "rendered": Array [
          "(",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "test.kubeapps.com",
            },
            "ref": null,
            "rendered": "test.kubeapps.com",
            "type": "code",
          },
          ")",
        ],
        "type": "span",
      },
      " ",
      "in ",
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "the ",
            <code>
              test
</code>,
            " namespace",
          ],
        },
        "ref": null,
        "rendered": Array [
          "the ",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "test",
            },
            "ref": null,
            "rendered": "test",
            "type": "code",
          },
          " namespace",
        ],
        "type": "span",
      },
      ".",
    ],
    "type": "li",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          "get, create",
          " ",
          <code>
            tests
</code>,
          " ",
          <span>
            (
            <code>
                        test.kubeapps.com
            </code>
            )
</span>,
          " ",
          "in ",
          <span>
            the 
            <code>
                        test
            </code>
             namespace
</span>,
          ".",
        ],
      },
      "ref": null,
      "rendered": Array [
        "get, create",
        " ",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "tests",
          },
          "ref": null,
          "rendered": "tests",
          "type": "code",
        },
        " ",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "(",
              <code>
                test.kubeapps.com
</code>,
              ")",
            ],
          },
          "ref": null,
          "rendered": Array [
            "(",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "test.kubeapps.com",
              },
              "ref": null,
              "rendered": "test.kubeapps.com",
              "type": "code",
            },
            ")",
          ],
          "type": "span",
        },
        " ",
        "in ",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "the ",
              <code>
                test
</code>,
              " namespace",
            ],
          },
          "ref": null,
          "rendered": Array [
            "the ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "test",
              },
              "ref": null,
              "rendered": "test",
              "type": "code",
            },
            " namespace",
          ],
          "type": "span",
        },
        ".",
      ],
      "type": "li",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders the special case for cluster-wide roles 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PermissionsListItem
    namespace="test"
    role={
        Object {
            "apiGroup": "test.kubeapps.com",
            "clusterWide": true,
            "resource": "tests",
            "verbs": Array [
              "get",
              "create",
            ],
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        "get, create",
        " ",
        <code>
          tests
</code>,
        " ",
        <span>
          (
          <code>
                    test.kubeapps.com
          </code>
          )
</span>,
        " ",
        "in ",
        "all namespaces",
        ".",
      ],
    },
    "ref": null,
    "rendered": Array [
      "get, create",
      " ",
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "tests",
        },
        "ref": null,
        "rendered": "tests",
        "type": "code",
      },
      " ",
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "(",
            <code>
              test.kubeapps.com
</code>,
            ")",
          ],
        },
        "ref": null,
        "rendered": Array [
          "(",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "test.kubeapps.com",
            },
            "ref": null,
            "rendered": "test.kubeapps.com",
            "type": "code",
          },
          ")",
        ],
        "type": "span",
      },
      " ",
      "in ",
      "all namespaces",
      ".",
    ],
    "type": "li",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          "get, create",
          " ",
          <code>
            tests
</code>,
          " ",
          <span>
            (
            <code>
                        test.kubeapps.com
            </code>
            )
</span>,
          " ",
          "in ",
          "all namespaces",
          ".",
        ],
      },
      "ref": null,
      "rendered": Array [
        "get, create",
        " ",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "tests",
          },
          "ref": null,
          "rendered": "tests",
          "type": "code",
        },
        " ",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "(",
              <code>
                test.kubeapps.com
</code>,
              ")",
            ],
          },
          "ref": null,
          "rendered": Array [
            "(",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "test.kubeapps.com",
              },
              "ref": null,
              "rendered": "test.kubeapps.com",
              "type": "code",
            },
            ")",
          ],
          "type": "span",
        },
        " ",
        "in ",
        "all namespaces",
        ".",
      ],
      "type": "li",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`uses the roles' namespace over the current namespace if defined 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PermissionsListItem
    namespace="test"
    role={
        Object {
            "apiGroup": "test.kubeapps.com",
            "namespace": "another",
            "resource": "tests",
            "verbs": Array [
              "get",
              "create",
            ],
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        "get, create",
        " ",
        <code>
          tests
</code>,
        " ",
        <span>
          (
          <code>
                    test.kubeapps.com
          </code>
          )
</span>,
        " ",
        "in ",
        <span>
          the 
          <code>
                    another
          </code>
           namespace
</span>,
        ".",
      ],
    },
    "ref": null,
    "rendered": Array [
      "get, create",
      " ",
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "tests",
        },
        "ref": null,
        "rendered": "tests",
        "type": "code",
      },
      " ",
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "(",
            <code>
              test.kubeapps.com
</code>,
            ")",
          ],
        },
        "ref": null,
        "rendered": Array [
          "(",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "test.kubeapps.com",
            },
            "ref": null,
            "rendered": "test.kubeapps.com",
            "type": "code",
          },
          ")",
        ],
        "type": "span",
      },
      " ",
      "in ",
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "the ",
            <code>
              another
</code>,
            " namespace",
          ],
        },
        "ref": null,
        "rendered": Array [
          "the ",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "another",
            },
            "ref": null,
            "rendered": "another",
            "type": "code",
          },
          " namespace",
        ],
        "type": "span",
      },
      ".",
    ],
    "type": "li",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          "get, create",
          " ",
          <code>
            tests
</code>,
          " ",
          <span>
            (
            <code>
                        test.kubeapps.com
            </code>
            )
</span>,
          " ",
          "in ",
          <span>
            the 
            <code>
                        another
            </code>
             namespace
</span>,
          ".",
        ],
      },
      "ref": null,
      "rendered": Array [
        "get, create",
        " ",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "tests",
          },
          "ref": null,
          "rendered": "tests",
          "type": "code",
        },
        " ",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "(",
              <code>
                test.kubeapps.com
</code>,
              ")",
            ],
          },
          "ref": null,
          "rendered": Array [
            "(",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "test.kubeapps.com",
              },
              "ref": null,
              "rendered": "test.kubeapps.com",
              "type": "code",
            },
            ")",
          ],
          "type": "span",
        },
        " ",
        "in ",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "the ",
              <code>
                another
</code>,
              " namespace",
            ],
          },
          "ref": null,
          "rendered": Array [
            "the ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "another",
              },
              "ref": null,
              "rendered": "another",
              "type": "code",
            },
            " namespace",
          ],
          "type": "span",
        },
        ".",
      ],
      "type": "li",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
